<?xml version="1.0" encoding="utf-8"?><!--
  ~ /********************************************************************************
  ~ * Expired Today
  ~ *
  ~ * Copyright (c) 2024.
  ~ * MrKaplan
  ~ *
  ~ ********************************************************************************/
  ~
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:padding="16dp"
    android:theme="@style/AppTheme"
    tools:context=".MainActivity">

    <!-- Menu Buttons -->

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="362dp"
        android:layout_height="87dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="79dp"
        android:layout_marginTop="77dp"
        android:layout_marginEnd="81dp"
        android:contentDescription="@string/today_s_group"
        android:src="@drawable/logo" />

    <Button
        android:id="@+id/btnAddProduct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginBottom="16dp"
        android:text="@string/add_product" />

    <Button
        android:id="@+id/btnProductList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnAddProduct"
        android:layout_centerHorizontal="true"
        android:text="@string/product_list" />

</RelativeLayout>